~ poprawka do congfigu DB

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -19,6 +19,7 @@ resources.frontController.params.displayExceptions = 1
 resources.db.adapter		 	= mysqli
 resources.db.params.charset 	= utf8
 resources.db.params.host	 	= localhost
+resources.db.params.dbname 		= tinab
 resources.db.params.username 	= root
 resources.db.params.password 	= abcd
 
