+ model usera + model grupy + model projektu + migracja nr 1 + wstępne narzędzia

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,19 +1,25 @@
 [all]
+; ścieżki
 includePaths.library 					= APPLICATION_PATH "/../library"
 includePaths.models  					= APPLICATION_PATH "/models"
 autoloaderNamespaces.core 				= "Core_"
 
+; bootstrap i resources
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 pluginpaths.Core_Application_Resource 	= "Core/Application/Resource"
 
+; front Controller
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
-
 resources.frontController.params.displayExceptions = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
-resources.frontController.params.displayExceptions = 1	
+
+;layout
+resources.layout.layoutPath	= APPLICATION_PATH "/views/layouts"
+resources.layout.layout	= default
+resources.view.helperPath.View_Helper = APPLICATION_PATH "/views/helpers"	
 
 ;baza danych
 resources.db.adapter		 	= mysqli
