--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,27 +1,31 @@
 [all]
-; ścieżki
-includePaths.library 					= APPLICATION_PATH "/../library"
-includePaths.models  					= APPLICATION_PATH "/models"
-autoloaderNamespaces.core 				= "Core_"
 
-; bootstrap i resources
-bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
-bootstrap.class = "Bootstrap"
-appnamespace = "Application"
+appnamespace = "Tinab"
+autoloaderNamespaces.core	= "Core_"
 pluginpaths.Core_Application_Resources 	= "Core/Application/Resources"
 
-; front Controller
-resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
-resources.frontController.params.displayExceptions = 1
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
+; ścieżki
+includePaths.library 		= APPLICATION_PATH "/../library"
+includePaths.models  		= APPLICATION_PATH "/models"
 
-;layout
+; bootstrap i resources
+bootstrap.path 	= APPLICATION_PATH "/Bootstrap.php"
+bootstrap.class = "Bootstrap"
+
+; front Controller
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
+resources.frontController.params.displayExceptions = 1
+resources.frontController.plugins[] = "Core_Controller_Plugin_ScriptPath"
+
+; layout
 resources.layout.layoutPath	= APPLICATION_PATH "/views/layouts"
 resources.layout.layout	= default
-resources.view.helperPath.View_Helper = APPLICATION_PATH "/views/helpers"	
 
-;baza danych
+; view helpery
+resources.view.helperPath.View_Helper = APPLICATION_PATH "/views/helpers"	
+resources.view.scriptPath = APPLICATION_PATH "/views/app-partials"
+
+; baza danych
 resources.db.adapter		 	= mysqli
 resources.db.params.charset 	= utf8
 resources.db.params.host	 	= localhost
@@ -29,10 +33,20 @@ resources.db.params.dbname 		= tinab
 resources.db.params.username 	= root
 resources.db.params.password 	= abcd
 
+; errory
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
+
+
+;------------------------- DEVELOPMENT --------------------------;
 [development : all]
 
+
+;---------------------------- LOCAL -----------------------------;
 [local : development]
 
+
+;--------------------------- STAGING ----------------------------;
 [staging : all]
 
 
