--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -41,6 +41,9 @@ phpSettings.display_errors = 1
 ;------------------------- DEVELOPMENT --------------------------;
 [development : all]
 
+resources.db.params.profiler.enabled	= true
+resources.db.params.profiler.class 		= Zend_Db_Profiler_Firebug
+
 
 ;---------------------------- LOCAL -----------------------------;
 [local : development]
